fix scroll snap and flexbox layout issues

--- a/src/sass/amenities.scss
+++ b/src/sass/amenities.scss
@@ -1,19 +1,19 @@
 #amenity-grid{
   display:grid;
   grid-template-columns: 40vw 40vw;
-  grid-template-rows:20vh 20vh;
+  grid-template-rows:1fr 1fr;
   grid-row-gap:0.5rem;
   grid-column-gap:0.5rem;
   @include mediaQuery(750px){
     grid-template-columns: 20vw 20vw 20vw 20vw;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 40vh;
   }
 }
 
 .amenity{
   display:flex;
   align-items:flex-end;
-  justify-content:center;
+  height:100%;
   background-size:cover;
   background-position:center;
   border-radius:1rem;
