--- a/src/sass/navigation.scss
+++ b/src/sass/navigation.scss
@@ -1,5 +1,5 @@
 body{
-  scroll-snap-type: mandatory y;
+  scroll-snap-type: y mandatory;
 }
 
 section{
